src/objects/MasterTest_del__c.object
<CustomObject>
    <fields>
        <fullName>DetailTest__c</fullName>
        <label>DetailTest</label>
        <referenceTo>DetailTest__c</referenceTo>
        <relationshipLabel>MasterTest</relationshipLabel>
        <relationshipName>MasterTest</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>No_of_Details__c</fullName>
        <label>No of Details</label>
        <summaryForeignKey>TestJunction__c.MasterTest__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TestCount__c</fullName>
        <label>TestCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MasterTest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MasterTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MasterTest</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>